# curve-dao

./: .pre-commit-config.yaml  dev-requirements.txt  pyproject.toml  setuptools.py
.github/workflows/: main.yaml
curve_dao/: __init__.py  addresses.py  proposals.py  simulate.py
curve_dao/proposals/: __init__.py  stableswap.py  utils.py
examples/: update_stableswap.py
tests/: conftest.py  test_addresses.py  test_kill_gauge.py  test_update_stableswap_ng.py
